# wikibase-api

./: .gitignore  .readthedocs.yml  Makefile  Pipfile  README.md  config-example.json  pyproject.toml
.hooks/: pre-commit
config/: sample-config.json
docs/: Makefile  conf.py  index.rst  requirements.txt
docs/api_reference/: api_reference.rst  the_wikibase_class.rst
docs/api_reference/models/: alias.rst  claim.rst  description.rst  entity.rst  label.rst  qualifier.rst  reference.rst
docs/development/: development.rst
docs/getting_started/: installation.rst  installation_and_usage.rst
docs/guides/: local_wikibase_instance.rst  more_information.rst
tests/: config-sample.json  conftest.py  test_alias.py  test_api.py  test_claim.py  test_claims.py  test_description.py  test_entities.py  test_entity.py  test_get_requests.py  test_label.py  test_qualifier.py  test_reference.py
wikibase_api/: __init__.py  api.py  config.py  wikibase.py  wikibase_api.py
wikibase_api/models/: __init__.py  alias.py  claim.py  description.py  entity.py  label.py  qualifier.py  reference.py
wikibase_api/modules/: __init__.py  entity.py
wikibase_api/utils/: case_conversion.py  config.py  exceptions.py  possible_values.py  validate_value.py  values.py
